<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="30dp"
    tools:layout_editor_absoluteY="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minesweeper"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/playGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="false"
        android:onClick="onClickPlay"
        android:text="@string/start_game_btn_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/upMines"
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClickMinesUp"
        app:icon="@android:drawable/arrow_up_float"
        app:iconGravity="textEnd"
        app:iconPadding="0sp"
        app:iconSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/playGame"
        app:layout_constraintEnd_toStartOf="@+id/downMines" />

    <Button
        android:id="@+id/downMines"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="52dp"
        android:onClick="onClickMinesDown"
        app:icon="@android:drawable/arrow_down_float"
        app:iconGravity="textEnd"
        app:iconPadding="0sp"
        app:iconSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/playGame"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/minesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:text="Mines: 20"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/playGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gridSizeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:text="Grid Size: 10x10"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/upGrid"
        android:layout_width="30dp"
        android:layout_height="30sp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:onClick="onClickGridUp"
        app:icon="@android:drawable/arrow_up_float"
        app:iconGravity="textEnd"
        app:iconPadding="0sp"
        app:iconSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/downGrid"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/downGrid"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:onClick="onClickGridDown"
        app:icon="@android:drawable/arrow_down_float"
        app:iconGravity="textEnd"
        app:iconPadding="0sp"
        app:iconSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableRow
        android:id="@+id/titleBarMM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/hsScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/rankHeaderMM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/rank_field_label"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/nameHeaderMM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/name_field_label"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/scoreHeaderMM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:width="0dp"
            android:gravity="center"
            android:text="@string/score_field_label"
            android:textSize="20dp" />
    </TableRow>

    <ScrollView
        android:id="@+id/hsScrollView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGame">

        <TableLayout
            android:id="@+id/highScoresMM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>